{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 52,
  "lineage": "01993889-8904-6f33-8cb6-a49bd3d6890c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a79b4262f493649",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0689c7ba0f9e811cd",
            "domain": "vpc",
            "id": "eipalloc-07a79b4262f493649",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0e4305660bd7b4823",
            "private_dns": "ip-10-0-1-50.us-east-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-3-18-145-218.us-east-2.compute.amazonaws.com",
            "public_ip": "3.18.145.218",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.webserver-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet_1",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb653ca2d3203ac1",
            "arn": "arn:aws:ec2:us-east-2:146424357479:instance/i-0a677fae5307d3c15",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a677fae5307d3c15",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0e4305660bd7b4823"
              }
            ],
            "primary_network_interface_id": "eni-0e4305660bd7b4823",
            "private_dns": "ip-10-0-1-50.us-east-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "3.18.145.218",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0166215ded96804fb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-034a064168ae92063",
            "tags": {
              "Name": "webserver"
            },
            "tags_all": {
              "Name": "webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-069bc3a297a505dcd"
            ]
          },
          "dependencies": [
            "aws_network_interface.webserver-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet_1",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:146424357479:internet-gateway/igw-0d89e5dbdadcdde88",
            "id": "igw-0d89e5dbdadcdde88",
            "owner_id": "146424357479",
            "vpc_id": "vpc-009b38ea6c22d3329"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "webserver-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:146424357479:network-interface/eni-0e4305660bd7b4823",
            "id": "eni-0e4305660bd7b4823",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "02:1e:53:58:37:04",
            "owner_id": "146424357479",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-069bc3a297a505dcd"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-034a064168ae92063"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet_1",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:146424357479:route-table/rtb-01671729680edfec0",
            "id": "rtb-01671729680edfec0",
            "owner_id": "146424357479",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d89e5dbdadcdde88",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d89e5dbdadcdde88",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod"
            },
            "tags_all": {
              "Name": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-009b38ea6c22d3329"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9d2191bfe48a643",
            "route_table_id": "rtb-01671729680edfec0",
            "subnet_id": "subnet-034a064168ae92063"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.prod_route_table",
            "aws_subnet.subnet_1",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:146424357479:security-group/sg-069bc3a297a505dcd",
            "description": "Allow Web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069bc3a297a505dcd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "146424357479",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-009b38ea6c22d3329"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:146424357479:subnet/subnet-034a064168ae92063",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-034a064168ae92063",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "146424357479",
            "tags": {
              "Name": "prod_subnet"
            },
            "tags_all": {
              "Name": "prod_subnet"
            },
            "vpc_id": "vpc-009b38ea6c22d3329"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:146424357479:subnet/subnet-08df4ab3379b708fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-08df4ab3379b708fe",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "146424357479",
            "tags": {
              "Name": "dev_subnet"
            },
            "tags_all": {
              "Name": "dev_subnet"
            },
            "vpc_id": "vpc-009b38ea6c22d3329"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:146424357479:vpc/vpc-009b38ea6c22d3329",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b688ef66848fa505",
            "default_route_table_id": "rtb-068e943e133245b00",
            "default_security_group_id": "sg-0ac688d2ffce7a07e",
            "dhcp_options_id": "dopt-0b58221ce11b72673",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-009b38ea6c22d3329",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-068e943e133245b00",
            "owner_id": "146424357479",
            "tags": {
              "Name": "production"
            },
            "tags_all": {
              "Name": "production"
            }
          }
        }
      ]
    }
  ]
}